backend with mysql database is connected and index.hbs file has completed

--- a/templates/index.hbs
+++ b/templates/index.hbs
@@ -2,29 +2,51 @@
 <html lang="en">
 
 <head>
-    <title>FIND A JOB</title>
+    <title>SteerJobs</title>
     <link rel="stylesheet" href="/assets/css/style.css">
 </head>
 
 <body>
+    <nav class="nav">
+        <div class="nav-logo">
+            <a class="nav-logo-link" href="#"><b>SteerJobs</b></a>
+        </div>
+        <div class="nav-container-link">
+            <a class="nav-link" href="/about">ABOUT</a>
+            <a class="nav-link" href="/login">SIGN-IN</a>
+            <a class="nav-link-signup" href="/signup">Sign-Up</a>
+        </div>
+    </nav>
+    <header class="head">
+        <div class="head-text">
+            <h1 class="head1">WELCOME TO A NEW PROFESSIONAL COMMUNITY</h1>
+            <a class="head-button" href="#"><span class="head-text-link-text">Search for a job</span> <span class="head-text-link-symb">></span> </a>
+            <a class="head-button" href="#"><span class="head-text-link-text">Find a person you know</span> <span class="head-text-link-symb">></span></a>
+        </div>
+        <div class="head-img">
+            <img src="https://homejobonline.co.in/img/online-data-entry-work-from-home.svg" alt="Oops...This page could not be loaded at this moment">
+        </div>
+    </header>
     <section id="get-job">
         <div class="job-heading">
             <h2 id="job2">Find Open jobs and Internship</h2>
         </div>
         <div class="job-link">
-            <h3 id="job3">SUGGESTED SEARCHES</h3>
-
-            <a href="#">Engineering</a>
-            <a href="#">Business Development</a>
-            <a href="#">Finance</a>
-            <a href="#">Administrative Assistant</a>
-            <a href="#">Retail Associate</a>
-            <a href="#">Customer Service</a>
-            <a href="#">Operation</a>
-            <a href="#">Information Technology</a>
-            <a href="#">Marketing </a>
-            <a href="#">Human Resources</a>
-
+            <div class="job-link-heading">
+                <h3 id="job3">SUGGESTED SEARCHES</h3>
+            </div>
+            <div class="job-content-link">
+                <a href="#">Engineering</a>
+                <a href="#">Business Development</a>
+                <a href="#">Finance</a>
+                <a href="#">Administrative Assistant</a>
+                <a href="#">Retail Associate</a>
+                <a href="#">Customer Service</a>
+                <a href="#">Operation</a>
+                <a href="#">Information Technology</a>
+                <a href="#">Marketing </a>
+                <a href="#">Human Resources</a>
+            </div>
         </div>
     </section>
 
@@ -50,7 +72,6 @@
             <img src="https://static-exp1.licdn.com/sc/h/dkfub4sc7jgzg3o31flfr91rv"
                 alt="Picture can't be loaded at the moment.... Sorry for inconvenience.">
         </div>
-
     </section>
 
     <section id="connect">
