--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1,10 +1,149 @@
 @import url('https://fonts.googleapis.com/css?family=Poppins:200,300,400,500,600,700,800,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Akaya+Kanadaka&display=swap');
 *
 {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     font-family: 'Poppins',sans-serif;
+}
+
+.nav
+{
+    padding: 0px 20px;
+    width: 100%;
+    height: 60px;
+    display: flex;
+    background-color: rgb(247, 247, 247); 
+    justify-content: space-between;
+    align-content: center;
+    overflow:hidden;
+
+}
+
+nav a
+{
+    margin: 0 5 px;
+    text-decoration: none;
+    padding: 8px 20px;
+    color:rgb(0, 0, 0);
+    font-family:'Akaya Kanadaka', cursive;
+    font-size: 20px;
+
+}
+
+.nav-logo, .nav-container-link
+{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding-right:8%;
+}
+.nav-logo-link 
+{
+   
+    margin: 40px;
+    text-decoration:none;
+    color:#000000;
+    padding: 8px 16px;
+    font-family:fantasy;
+    display: inline-block;
+    font-size: 16px;   
+
+}
+.nav-link
+{
+    border: none;
+    border-radius: 3px;
+    color:rgb(0, 0, 0);
+    display:inline-block;
+    cursor: pointer;
+
+}
+.nav-link:hover
+{
+    background-color:rgba(214, 214, 214, 0.6);
+}
+.nav-link-signup
+{
+    
+    background-color: rgb(255, 255, 255);
+    border: 2px solid rgb(241, 29, 195);
+    border-radius: 30px;
+    color:rgb(0, 0, 0);
+    padding: 9px 12px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size:22px;
+    margin: 5px 8px;
+    cursor: pointer;
+}
+.nav-link-signup:hover
+{
+    background-color: rgb(247, 234, 234);
+    color:rgb(78, 3, 47);
+}
+.head
+{     
+    position: relative;
+    width:100%;
+    height: calc(100vh - 40px);
+    margin: 0;
+    display: flex;
+    padding:2% 5%;
+    background-color: rgb(247, 247, 247);
+}
+.head .head-text
+{
+    width:40%;
+    display:flex;
+    flex-direction:column;
+    align-items: left;
+}
+.head .head-text .head1
+{
+    margin-top: 80px;
+    font-size: 30px;
+    font-family: segoe UI;
+    margin-bottom: 10px;
+}
+.head .head-text .head-button
+{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    border-radius: 5px;
+    border:2px solid rgba(0, 0, 0, 0.19);
+    color: #222;
+    font-weight: 600;
+    text-align:left;
+    text-decoration:none;
+    font-size:20px;
+    cursor: pointer;
+    width: 70%;
+    margin-top: 10px;
+    padding: 10px 24px;
+}
+.head .head-text .head-button:hover
+{
+    box-shadow: 0px 4px 6px rgb(0 0 0 / 15%);
+}
+.head-img
+{
+    position: relative;
+    top: 0;
+    left: 0;
+    height:100%;
+    width:60%;
+    align-items: center;
+}
+
+.head-img img {
+    width: 100%;
+    height: 100%;
+    position: absolute;
 }
 
 .section
@@ -158,20 +297,37 @@
     padding: 10%;
 }
 
-#get-job  .job-link {
-    padding: 4%;
+#get-job .job-heading, #get-job .job-link {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#get-job .job-heading {
+    width: 45%;
 }
 
 #get-job .job-heading #job2 {
-    font-size: 60px;
+    font-size: 90px;
     font-family: cursive;
+    font-weight: 900;
 }
 
-#get-job .job-heading #job3 {
+#get-job .job-link {
+    flex-direction: column;
+    width: 55%;
+    padding: 8%;
+}
+
+#get-job .job-link-heading #job3 {
     font-size: 27px;
     font-family: verdana;
+    margin: 30px 0;
 }
 
+#get-job .job-link .job-content-link {
+    text-align: center;
+}
 
 #get-job .job-link a, #get-job .job-link a,
 #post-job .post-link a, #post-job .post-link a,
@@ -231,22 +387,25 @@
 
 #feature {
     padding: 5%;
+    display: flex;
+    flex-direction: row-reverse;
+    justify-content: space-around;
+    align-items: center;
+    width: 100%;
+    height: 100vh;
 }
 
 .feature-content, .picture, .connect-picture, .connect-content {
     width: 50%;
-    height: 100vh;
     padding: 4%;
 }
 
 #feature2, #connect2 {
-    display: flex;
     font-size: 35px;
     font-family: tahoma;
-    color: rgb(0, 0, 0);
+    color: #222;
     text-align: center;
-    justify-content: center;
-    padding: 60px 0 0;
+    margin: -40px 0 60px 0;
 }
 
 #para1 {
