--- a/templates/index.hbs
+++ b/templates/index.hbs
@@ -13,8 +13,8 @@
         </div>
         <div class="nav-container-link">
             <a class="nav-link" href="/about">ABOUT</a>
-            <a class="nav-link" href="/login">SIGN-IN</a>
-            <a class="nav-link-signup" href="/signup">Sign-Up</a>
+            <a class="nav-link" href="/login">{{signinAndProfile}}</a><!--SIGN-IN-->
+            <a class="nav-link-signup" href="/signup">{{signupAndSignout}}</a><!--Sign-Up-->
         </div>
     </nav>
     <header class="head">
