--- a/templates/signup.hbs
+++ b/templates/signup.hbs
@@ -9,13 +9,26 @@
     <link rel="stylesheet" href="/assets/css/style.css">
 </head>
 <style>
-    .section {
+    .section,.nav {
         background-color: rgba(157, 234, 248,0.5);
+    }
+    .section {
+        height: calc(100vh - 60px);
     }
 
 </style>
 
 <body>
+    <nav class="nav">
+        <div class="nav-logo">
+            <a class="nav-logo-link" href="/home"><b>SteerJobs</b></a>
+        </div>
+        <div class="nav-container-link">
+            <a class="nav-link" href="/about">ABOUT</a>
+            <a class="nav-link" href="/login">{{signinAndProfile}}</a><!--SIGN-IN-->
+            <a class="nav-link-signup" href="/signup">{{signupAndSignout}}</a><!--Sign-Up-->
+        </div>
+    </nav>
     <section class="section">
         <div class="container">
             <div class="content-img">
