userInfoForm is completed

--- a/templates/feed.hbs
+++ b/templates/feed.hbs
@@ -24,7 +24,7 @@
                 <div class="card-profile-section">
                     <div class="card-head-design"></div>
                     <div class="profile-link-container">
-                        <a class="profile-link" href="profile.html">
+                        <a class="profile-link" href="/profile">
                             <div class="profile-img">
                                 <img src="https://freesvg.org/img/1538346433.png" alt="user-default profile">
                             </div>
