--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -280,6 +280,142 @@ nav a
     columns: #677eff;
 }
 
+/* 
+    user information form 
+*/
+
+.section .container .user-info-form {
+    width: 100%;
+    height: 100%;
+    padding: 0px;
+}
+
+.section .container .user-info-form .heading {
+    position: relative;
+    width: 100%;
+    height: 100px;
+    /* text-align: left; */
+}
+
+.section .container .user-info-form .heading img {
+    position: relative;
+    width: 100%;
+    height: 100px;
+    z-index: 0;
+}
+
+.section .container .user-info-form .heading h2 {
+    position: absolute;
+    top: 30px;
+    left: 40px;
+    color: #efefef;
+    font-family: 'Noto Serif', serif;
+}
+
+
+.section .container .user-info-form form  {
+    /* border: 1px solid red; */
+    width: 100%;
+    min-height: 100%;
+    max-height: 100%;
+}
+
+.section .container .user-info-form .user-info-form-content {
+    padding: 20px 40px;
+    display: grid;
+    grid-template-columns: 33.333% 33.333% 33.333%;
+}
+
+.section .container .user-info-form .form-content {
+    /* border: 1px solid red; */
+    padding: 0px 20px;
+    /* margin: 1px; */
+}
+
+.section .container .user-info-form form input[type="text"],
+.section .container .user-info-form form input[type="phone"],
+.section .container .user-info-form form input[type="date"],
+.section .container .user-info-form form input[type="password"],
+.section .container .user-info-form form input[type="submit"],
+.section .container .user-info-form form input[type="button"],
+.section .container .user-info-form form select,
+.section .container .user-info-form form textarea
+{
+    position: relative;
+    width: 100%;
+    padding: 5px 10px;
+    background: #f5f5f5;
+    color: #333;
+    border: none;
+    outline: none;
+    box-shadow: none;
+    margin: 8px 0;
+    font-size: 14px;
+    letter-spacing: 1px;
+    font-weight: 300;
+    border-radius: 4px;
+    background-color: rgb(214, 224, 224);
+}
+
+.section .container .user-info-form form textarea {
+    max-width: 266px;
+    min-width: 266px;
+    max-height: 115px;
+    min-height: 115px;
+}
+
+.section .container .user-info-form form .form-content-mobile {
+    display: flex;
+    flex-direction: column;
+}
+
+
+.section .container .user-info-form form .form-content-mobile .form-data {
+    display: flex;
+}
+
+.section .container .user-info-form form .form-content-mobile select {
+    width: 53%;
+    margin-right: 5px;
+}
+
+.section .container .user-info-form form .form-submit {
+    display: flex;
+    justify-content: space-between;
+    padding: 0 40px;
+    grid-column:  1 / 4;
+}
+
+.section .container .user-info-form form .form-submit input {
+    width: 25%;
+}
+
+.section .container .user-info-form form input[type="submit"],
+.section .container .user-info-form form input[type="button"]
+{
+    max-width: 100px;
+    background: #677eff;
+    color: #fff;
+    cursor: pointer;
+    font-size: 14px;
+    font-weight: 500;
+    letter-spacing: 1px;
+    margin-top: 25px;
+}
+
+.section .container .user-info-form form input[type="submit"]:hover,
+.section .container .user-info-form form input[type="button"]:hover {
+    box-shadow: 0 6px 10px 0 rgba(0, 0, 0, 0.24), 0 3px 5px 0 rgba(0, 0, 0, 0.19);
+}
+
+.star-color-red {
+    color: red;
+}
+
+/*
+    get and post gobs section
+*/
+
 #get-job, #feature {
     display: flex;
     justify-content: center;
